k8s/insight-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insight-deploy
  namespace: insight
  labels:
    app: insight-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insight-deploy
  template:
    metadata:
      labels:
        app: insight-deploy
    spec:
      containers:
        - name: insight-deploy
          image: ayushjsrtia/code-analyzer-insight:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
