k8s/insight-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insight-service
  namespace: insight
spec:
  selector:
    app: insight-deploy
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30070
